some rewritting in the articles

--- a/pages/alojamiento.html
+++ b/pages/alojamiento.html
@@ -121,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="row">
                     <div class="col-md-5 text_align_mobile">
                         <p><br>
-                            Queridos Invitados, si deseáis venir antes de la boda para visitar Ełk o alrededores p.e., os ayudaremos con alojamiento. Contácta con nosotros con las fechas de vuestra estancia, sin contar la noche de después de la boda que ya viene incluida, y os informaremos sobre las posibilidades de alojamiento. 
+                            Queridos Invitados, si deseáis venir antes de la boda para visitar Ełk o alrededores p.e., os ayudaremos con alojamiento. Contácta con nosotros indicándonos las fechas de vuestra estancia, sin contar la noche de después de la boda que ya viene incluida, y os informaremos sobre las posibilidades de alojamiento. 
                         </p>
                         <h2 align=left>Mándanos un email</h2> 
                     <!-- forma de contacto                                mi boton para español-->
