--- a/pages/polaco-supervivencia.html
+++ b/pages/polaco-supervivencia.html
@@ -203,7 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                   <h2 id="presentaciones" class="gray_with_black_stroke"><br><br>PRESENTACIONES</h2>
                         <p>
-                            En polaco se suele hablar de "Usted" incluso entre gente joven. <b>Tutear desde el principio se considera falta de educación<br></b>
+                            En polaco se suele hablar de "Usted" incluso entre gente joven. <b>Tutear desde el principio se puede considerar falta de educación<br></b>
                             
                             <b><br>Señor - Señora</b><br> 
                             Pan - Pani / <i>Pan - Páni</i>
@@ -228,7 +228,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                     <h2 id="ligoteo" class="gray_with_black_stroke"><br><br>LIGOTEO Y OTRAS</h2>
                         <p>
-                            Unas cuantas frases comidín, algunas usarlas con preucación :D<br>
+                            Unas cuantas frases comidín, algunas usarlas con precuación :D<br>
 
                             <b><br>No entiendo</b><br> 
                             Nie rozumiem  / <i>Nie rosúmiem</i>
