--- a/pages/boda-polaca.html
+++ b/pages/boda-polaca.html
@@ -145,14 +145,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </p>
 
                     <h2 class="gray_with_black_stroke">EN LA IGLESIA</h2>
-                    <p>Los novios entran juntos al altar y detrás los siguen los testigos, uno por cada novio. Durante la misa, los testigos se sientan al lado o detrás de los novios. A diferencia de la ceremonia española, en la polaca no existe papel de padrinos, por eso los padres se sientan en primera fila y no con los novios. El resto de la ceremonia transcurre de forma similar a la española exceptuando que no hay arras y que durante el momento decisivo del “Sí, quiero” el cura enlaza las manos de los novios con su estola (la bufanda que lleva al cuello).</p>
+                    <p>Los novios entran juntos al altar y detrás les siguen los testigos, uno por cada novio. Durante la misa, los testigos se sientan al lado o detrás de los novios. A diferencia de la ceremonia española, en la polaca no existe el papel de padrinos. Por eso, los padres se sientan en primera fila y no con los novios. El resto de la ceremonia transcurre de forma similar a la española exceptuando que no hay arras y que durante el momento decisivo del “Sí, quiero” el cura enlaza las manos de los novios con su estola (la bufanda que lleva al cuello).</p>
 
-                    <p>Los novios salen de la Iglesia y los amigos y familiares lanzan arroz o pétalos, al igual que en España. Después tiran monedas que los novios recogen como representación de la prosperidad en la unión de la pareja. Por último, los invitados se colocan enfrente de los novios, los felicitan y les dan flores o vino y el sobre con el dinero.
+                    <p>Los novios salen de la Iglesia y los amigos y familiares suelen lanzar arroz o pétalos, al igual que en España. Después tiran monedas que los novios recogen como representación de la prosperidad en la unión de la pareja. Por último, los invitados se colocan enfrente de los novios, los felicitan, les dan flores o vino y el sobre con el dinero o regalo.
                     
                     <br><br>Con esto concluye la parte formal de la boda, ¡ahora comienza lo mejor!
 
                     <br>
-                    <blockquote><b>Curiosidad:</b> Es posible que NO todos los invitados presentes en la iglesia irán a la fiesta. En Polonia hay dos tipos de las invitaciones: invitación a la ceremonia eclesiástica o invitación completa que incluye el convite.
+                    <blockquote><b>Curiosidad:</b> Es posible que NO todos los invitados presentes en la iglesia vayan a la fiesta. En Polonia hay dos tipos de las invitaciones: invitación a la ceremonia eclesiástica e invitación completa que incluye el convite.
                     </blockquote>
                     </p>
 
@@ -160,9 +160,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
                     <p>Tras la ceremonia, los novios e invitados se dirigen en comitiva hacia el lugar del banquete. En el trayecto la gente se interpone en el camino de los novios impidiendo su paso. Para poder pasar los novios dan una botella de vodka a los adultos o chuches a los más pequeños.</p>
 
-                    <p> Después de la dura travesía, los novios llegan a la entrada del lugar del convite, donde los padres los esperan. Allí tendrán que brindar con un chupito de agua o vodka y comer pal con sal; además el vaso de chupito se tiene que tirar por encima del hombro y romperse. ¡Si no se rompe el matrimonio tendrá mala suerte! Después el novio coge a su esposa en brazos y cruzan juntos el umbral de la puerta.</p>
+                    <p> Después de la dura travesía, los novios llegan a la entrada del restaurante donde los padres los esperan. Allí tendrán que brindar con un chupito de agua o vodka y comer pal con sal; además el vaso de chupito se tiene que tirar por encima del hombro y romperse. ¡Si no se rompe el matrimonio tendrá mala suerte! Después el novio coge a su esposa en brazos y cruzan juntos el umbral de la puerta.</p>
 
-                    <p>Llegados a este momento, se realiza el primer brindis del día con champagne y se canta la famosa canción “Sto Lat” (Que viváis 100 años). Aquí podéis escuchar la canción que como veréis se cantará en repetidas ocasiones durante la fiesta: 
+                    <p>Llegados a este momento, se realiza el primer brindis del día con champagne y se canta la famosa canción “Sto Lat” (Que viváis 100 años). Aquí podéis escuchar la canción que, como veréis, se cantará en repetidas ocasiones durante la fiesta: 
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                             <div class="embed-responsive embed-responsive-16by9">
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <p>
 
                     <h2 class="gray_with_black_stroke">Y EN EL SALÓN DE LA BODA...</h2>
-                    <p>Después del brindis los invitados entran al salón y se les sirve la comida. Lo primero que os llamará la atención son las botellas de vodka y vasos de chupito que están listos en la mesa desde el principio. Comeréis y haréis un brindis, con su “Sto Lat” incluido y llegará el primer baile de los novios. A partir de aquí se acabó el protocolo. Como veréis a lo largo de la velada, una boda polaca es más animada y mucho más interactiva que la española: se come, se bebe, se baila, se ríe, se habla, se juega y se vuelve a comer y a bailar sin ningún orden preestablecido y sin tener que pasar por todos los pasos.
+                    <p>Después del brindis los invitados entran al salón y se les sirve la comida. Lo primero que llama la atención son las botellas de vodka y vasos de chupito que están listos en la mesa desde el principio. Luego empieza el banquete y se brinda con su “Sto Lat” incluido. Poco a poco, el primer baile de los novios llega. A partir de aquí se acabó el protocolo. Como veréis a lo largo de la velada, una boda polaca es más animada y mucho más interactiva que la española: se come, se bebe, se baila, se ríe, se habla, se juega y se vuelve a comer y a bailar sin ningún orden preestablecido y sin tener que pasar por todos los pasos.
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                             <div align="center">
@@ -186,7 +186,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </div>
                     </div>
                     </p>
-                    <p>En la fiesta, normalmente, hay un grupo de música en directo que suele animar la fiesta y suele marcar el ritmo de ella. Pueden sugerir cuando se va a bailar o cuando se se vuelve a la mesa a brindar con vodka. Durante la fiesta hay brindis, se puede cantar “Sto Lat”, y otras canciones. Por ejemplo, se canta una canción en la cual se dice que el vodka está amargo y seguirá amargo hasta que no se besen los novios. Además hay juegos donde los invitados participan y al ganador se le dan premios. Escucharás música que te extrañará en la pista y a los polacos los verás bailando como posesos; ¡es el <b>Disco Polo!</b> <br><br></p>
+                    <p>En la fiesta, normalmente, hay un grupo de música en directo que suele animar la fiesta y suele marcar el ritmo de ella. Pueden sugerir cuando se va a bailar o cuando se vuelve a la mesa a brindar con vodka. Durante la fiesta hay brindis, se puede cantar “Sto Lat”, y otras canciones. Por ejemplo, se canta una canción en la cual se dice que <b>el vodka está amargo</b> y seguirá amargo hasta que no se besen los novios. Además, hay juegos donde los invitados participan y al ganador se le dan premios. Escucharéis música que os extrañará en la pista y a los polacos se les puede ver bailando como posesos; ¡es el <b>Disco Polo!</b> <br><br></p>
 
                    <div class="row">
                         <div class="col-md-6">
@@ -208,11 +208,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <p>
                     <br><br>
-                    La fiesta sigue esa dinámica hasta la llegada de la medianoche donde se realiza otra de las tradiciones de las bodas polacas: el <b>oczepiny</b>. Oficialmente marca el primer día de la vida de la novia como esposa. La dama de honor retira el velo de la novia, y cuando éste ha sido retirado, la novia lo lanza a las solteras presentes en la celebración. Luego, el novio lanza la corbata o pajarita a los solteros presentes en la sala. Él que atrape la corbata y la chica soltera que atrapó el velo forman la siguiente pareja en “casarse”. Esta pareja hace su primer baile y luego la fiesta continúa.
+                    Durante el resto de la fiesta se sigue alternando baile y comida hasta la llegada de la medianoche. Cuando llega es el momento de otra de las tradiciones de las bodas polacas: el <b>oczepiny</b>. Oficialmente marca el primer día de la vida de la novia como esposa. La dama de honor retira el velo de la novia, y cuando éste ha sido retirado, la novia lo lanza a las solteras presentes en la celebración. Luego, el novio lanza la corbata o pajarita a los solteros presentes en la sala. Él que atrape la corbata y la chica soltera que atrapó el velo forman la siguiente pareja en “casarse”. Esta pareja hace su primer baile y luego la fiesta continúa.
 
                     <br><br>
-
-                    En el segundo día de la boda se continúa con la celebración pero de una manera más informal y relajada. Se trata de una comida familiar donde además se puede bailar y seguir divirtiéndose durante la tarde.
+                    En el segundo día de la boda se continúa con la celebración pero de una manera más informal y relajada. Se trata de una comida familiar donde además se puede bailar y seguir divirtiéndose durante la tarde. <b>Se suele ir vestido más informal.</b>
                     </p>
 
 
