--- a/404.html
+++ b/404.html
@@ -43,9 +43,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="error">
                 <div class="container">
 
-                        <div class="white_with_gray_stroke">
-                            <h1 style="text-align: center">404<br>
-                            Sorry we didn't find that page!<br><br></h1>
+                        <div style="text-align: center">
+                           <h1> 404<br></h1>
+                           <h2> Sorry we didn't find that page!<br><br></h2>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
