--- a/pages/slub.html
+++ b/pages/slub.html
@@ -117,7 +117,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row">
                 <div class="text_align_mobile" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
                     
-                    <p>Mając na uwadze fakt, że nasze wesele odbędzie się w Polsce, mieszając tradycje obu krajów, chcielibyśmy Wam przybliżyć, Kochani Goście, jak wyglądy typowy ślub i wesele w Hiszpanii, skąd pochodzi Pan Młody. <p>
+                    <p>Mając na uwadze fakt, że nasze wesele odbędzie się w Polsce, mieszając tradycje obu krajów, chcielibyśmy Wam przybliżyć, Kochani Goście, jak wygląda typowy ślub i wesele w Hiszpanii, skąd pochodzi Pan Młody. <p>
 
                     <h2 class="gray_with_black_stroke"><br>PRZYGOTOWANIA</h2>
 
