--- a/pages/alojamiento.html
+++ b/pages/alojamiento.html
@@ -104,7 +104,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
                         <h2 style="text-align: center">Alojamiento</h2>
-                        <h2 style="text-align: center">Noclegi</h2>
+                        <h2 style="text-align: center">Nocleg</h2>
                     </div>
                 </div>
             </div>
