--- a/404.html
+++ b/404.html
@@ -44,8 +44,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="container">
 
                         <div style="text-align: center">
-                           <h1> 404<br>
-                           <h3> Sorry we didn't find that page!<br><br></h3>
+                           <h1> 404<br>Sorry we didn't find that page!<br><br></h1>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
