--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <!-- toastr CSS-->
@@ -98,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <li><a class="links" href="pages/polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
                             <li><a class="links" href="pages/warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="pages/peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="pages/alojamiento.html">Noclegi</a></li>
+                            <li><a class="links" href="pages/alojamiento.html">Nocleg</a></li>
                         </ul>
                     </li>
                 </ul>
