--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -14,7 +14,6 @@
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -87,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <li><a class="links" href="polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
                             <li><a class="links" href="warsaw.html">Warszawa</a></li>
                             <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="alojamiento.html">Noclegi</a></li>
+                            <li><a class="links" href="alojamiento.html">Nocleg</a></li>
                         </ul>
                     </li>
                 </ul>
