h1 to h2 for btn

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1> Despegamos en...</h1><h1>Startujemy za ...</h1>
+                        <h1> Despegamos en...<br>Startujemy za ...</h1>
                             <div id="days" id="hours" class="timer_box"></div>
                             <div id="hours" class="timer_box"></div>
                             <div id="minutes" class="timer_box"></div>
@@ -171,7 +171,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <!-- He añadido required para que sea necesario meter los datos. Habría que traducirlo con algun script-->
                     <!-- Para evitar que formspree me redirija http://stackoverflow.com/questions/33984667/tryin-to-get-around-the-formspree-redirect-->
 
-                    <div class="row"><h1 class="text-center"><a href="#myModal" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Contáctanos</a></h1></div>
+                    <div class="row"><h2 class="text-center"><a href="#myModal" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Contáctanos</a></h2></div>
 
                     <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -229,7 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <h2  align=left>Wyślij do nas zapytanie</h2>
                     <p class="lead text_align_mobile">Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
                      <!-- forma de contacto                                polaco-->
-                    <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h1></div>
+                    <div class="row"><h2 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h2></div>
 
                     <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
