--- a/pages/boda-polaca.html
+++ b/pages/boda-polaca.html
@@ -102,8 +102,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>¿Qué te encontrarás el día 20.08.16?</h2>
-                        <h3 class="text-uppercase">Descubre como es una boda polaca</h3>
+                        <!--<h2>¿Qué te encontrarás el día 20.08.16?</h2>-->
+                        <h1>¡Descubre como es una boda polaca!</h1>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                         <div class="col-xs-12 col-md-3">
                             <div align="center">
-                                <img style="max-width:300px;" class="img-responsive "
+                                <img alt="mapa de europa con españa y polonia resaltados" style="max-width:300px;" class="img-responsive "
                                     src="../img/esp_pl_grad.jpg">                        
                             </div>
                         </div>
