--- a/pages/slub.html
+++ b/pages/slub.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ślub po Hiszpańsku">
+    <meta name="description" content="Ślub po Hiszpańsku. Zwyczaje Hiszpańskie.">
     <meta name="author" content="Javier Oliver">
 
     <title>Zwyczaje Hiszpańskie</title>
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>Ślub po Hiszpańsku</h2>
+                        <h1>Ślub po Hiszpańsku</h1>
                     </div>
                 </div>
             </div>
@@ -150,12 +150,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="row">
                         <div class="col-md-5">
                             <div align="center">
-                                <img  class="img-responsive img-rounded" src="../img/jamon2.jpg">
+                                <img alt="jamon"  class="img-responsive img-rounded" src="../img/jamon2.jpg">
                             </div>
                         </div>
                         <div class="col-md-offset-1  col-md-5">
                             <div align="center">
-                                <img  class="img-responsive img-rounded" src="../img/tapa_1.jpg">                        
+                                <img  alt="tapas" class="img-responsive img-rounded" src="../img/tapa_1.jpg">                        
                             </div>
                         </div>
                     </div>
@@ -167,12 +167,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="row">
                         <div class="col-md-5">
                             <div align="center">
-                                <img  class="img-responsive img-rounded" src="../img/marisco.jpg">
+                                <img alt="marisco"  class="img-responsive img-rounded" src="../img/marisco.jpg">
                             </div>
                         </div>
                         <div class="col-md-offset-1  col-md-5">
                             <div align="center">
-                                <img  class="img-responsive img-rounded" src="../img/sorbete2.jpg">                        
+                                <img  alt="después de una copiosa comida" class="img-responsive img-rounded" src="../img/sorbete2.jpg">                        
                             </div>
                         </div>
                     </div>                   
