--- a/pages/thanks_pl.html
+++ b/pages/thanks_pl.html
@@ -52,8 +52,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="container">
 
                         <div class="bottom-aligned-text white_with_gray_stroke">
-                            <h2> Dziękujemy za wiadomość!</h2>
-                            <h2> Obiecujemy odpowiedzieć szybko na Wasze maile.!<br><br></h2>
+                            <h1> Dziękujemy za wiadomość!<br>
+                            	 Obiecujemy odpowiedzieć szybko na Wasze maile.!<br><br></h1>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
