--- a/pages/evento.html
+++ b/pages/evento.html
@@ -102,7 +102,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2 style="text-align:center">EL EVENTO<br>WYDARZENIE</h2>
+                        <h1 style="text-align:center">El evento<br>
+                        <span lang="pl">Wydarzenie</span></h1>
                     </div>
                 </div>
             </div>
@@ -128,12 +129,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="row">
                     <div class="col-md-5">
                         <div align="center">
-                            <img  class="img-responsive img-rounded" src="../img/iglesia.jpg">                        
+                            <img alt="iglesia polaca Ełk" class="img-responsive img-rounded" src="../img/iglesia.jpg">                        
                         </div>
                     </div>
                     <div class="col-md-offset-1  col-md-5">
                         <div align="center">
-                            <img  class="img-responsive img-rounded" src="../img/iglesia_dentro.jpg">                        
+                            <img  alt="iglesia polaca dentro Ełk" class="img-responsive img-rounded" src="../img/iglesia_dentro.jpg">                        
                         </div>
                     </div>
                 </div>
@@ -145,12 +146,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="row">
                     <div class="col-md-5">
                         <div align="center">
-                            <img  class="img-responsive img-rounded" src="../img/hotel_2.jpg">                        
+                            <img  alt="hotel en Ełk" class="img-responsive img-rounded" src="../img/hotel_2.jpg">                        
                         </div>
                     </div>
                     <div class="col-md-offset-1  col-md-5">
                         <div align="center">
-                            <img  class="img-responsive img-rounded" src="../img/hotel_3.jpg">                        
+                            <img  alt="hotel en Ełk" class="img-responsive img-rounded" src="../img/hotel_3.jpg">                        
                         </div>
                     </div>
                 </div>
@@ -158,7 +159,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="row">
                     <div class="col-md-11">
                         <div align="center">
-                            <img  class="img-responsive img-rounded" src="../img/hotel_1.jpg">
+                            <img  alt="hotel en Ełk" class="img-responsive img-rounded" src="../img/hotel_1.jpg">
                         </div>
                     </div>
                     
