--- a/pages/thanks_es.html
+++ b/pages/thanks_es.html
@@ -51,8 +51,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="container">
 
                         <div class="bottom-aligned-text white_with_gray_stroke">
-                            <h2 >¡Gracias por tu e-mail!</h2>
-                            <h2> ¡Responderemos a la mayor brevedad posible!<br><br></h2>
+                            <h1 >¡Gracias por tu e-mail!<br>
+                           		 ¡Responderemos a la mayor brevedad posible!<br><br></h1>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
