--- a/404.html
+++ b/404.html
@@ -1,65 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ERROR 404">
-    <meta name="author" content="Javier Oliver">
-    <title>Historias de una Boda en Polonia</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-   <!-- Custom CSS -->
-    <link href="../css/grayscale.css" rel="stylesheet">
-    <!-- toastr CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
-
+  
 
 </head>
 
 <body>
-
-<!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PX2L4G"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PX2L4G');</script>
-<!-- End Google Tag Manager -->
-
-    <!-- Navigation -->
-
-    <header>
-        <div class="error">
-                <div class="container">
-
-                        <div style="text-align: center">
-                           <h1> 404<br>Sorry we didn't find that page!<br><br></h1>
-
-                        </div>
-                        <div class="col-md-8 col-md-offset-2 ">
-                            <a href="../index.html" class="btn btn-circle">
-                                <i class="fa fa-angle-double-left animated"></i>
-                            </a>
-                        </div>
-
-                         <div class="col-md-8 col-md-offset-2">
-                             <h5><br> Main page</h5>
-                        </div>
-
-
-                </div>
-            </div>
-    </header>
+	<h1>Ups... página no encontrada</h1>
 </body>
 
 </html>
