--- a/index.html
+++ b/index.html
@@ -7,29 +7,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Aquí encontrarás información de interes referente al evento del 20.08.16">
+    <meta name="description" content="Web de Javier Oliver Garcia. Incluye una muestra de mi trabajo y blog.">
     <meta name="author" content="Javier Oliver">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Language" content="es, pl"/>
-    <title>Historias de una Boda en Polonia</title>
+    <title>¡Bienvenidos a mi web!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <!-- toastr CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
-    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -46,240 +33,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top " role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top" >
-                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div  class="collapse navbar-collapse navbar-right navbar-main-collapse ">
-
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a  class="page-scroll force_collapse" href="#about">Introducción<br>Wstęp</a>
-                    </li>
-
-                    <li>
-                        <a class="page-scroll force_collapse" href="#contact">Contacto<br>Kontakt</a>
-                    </li>
-                   <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
-                        <ul id="ul_enlaces" class="dropdown-menu">
-
-                            <li><a class="links" href="pages/evento.html">El Evento</a></li>
-                            <li><a class="links" href="pages/boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="pages/polaco-supervivencia.html">Guía de polaco</a></li>
-                            <li><a class="links" href="pages/warsaw.html">Varsovia</a></li>
-                            <li><a class="links" href="pages/peluqueria.html">Peluquería</a></li>
-                            <li><a class="links" href="pages/alojamiento.html">Alojamiento</a></li>
-                        </ul>
-                    </li>
-
-                    <!-- PL-->
-                     <li lang="pl">
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
-                        <ul id="ul_enlaces" class="dropdown-menu">
-
-                            <li><a class="links" href="pages/evento.html">Wydarzenie</a></li>         
-                            <li><a class="links" href="pages/slub.html">Ślub po Hiszpańsku</a></li>
-                            <li><a class="links" href="pages/polaco-supervivencia.html">Mini słownik języka polskiego</a></li>                            
-                            <li><a class="links" href="pages/warsaw.html">Warszawa</a></li>
-                            <li><a class="links" href="pages/peluqueria.html">Fryzjer</a></li>
-                            <li><a class="links" href="pages/alojamiento.html">Nocleg</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
     <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1> Despegamos en...<br>Startujemy za ...</h1>
-                            <div id="days" id="hours" class="timer_box"></div>
-                            <div id="hours" class="timer_box"></div>
-                            <div id="minutes" class="timer_box"></div>
-                            <div id="seconds" class="timer_box"></div>
-                    </div>
-                    <div class="col-md-8 col-md-offset-2">
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated "></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <header>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<h1> En construcción </h1>
+				</div>
+			</div>
+		</div>
     </header>
 
-
-    <!-- About Section -->
-	<div id="about" class="about-section">
-    <section class="container content-section text-center">
-            <div class="row">
-                <div class="col-md-5">
-                    <h2 align=left>¡QUERIDOS INVITADOS, OS PRESENTAMOS LA PÁGINA DE NUESTRA BODA!</h2>
-                    <p class="lead text_align_mobile">Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
-                    el cual tendrá lugar el 20 de agosto de <b>2016 en Ełk (pronunciado euk).</b>
-                    <br><br>En ésta página encontraréis información de interés que esperamos sea de utilidad para vosotros. En el barra de navegación superior podéis acceder a los diferentes artículos que hemos incluido. Si tenéis alguna pregunta, duda y/o sugerencia, pinchar en <b><i>Contacto</i></b> para mandarnos un email. Os contestaremos a la mayor brevedad posible.
-                    </p>
-                </div>
-
-                <div class="col-md-1">
-                    <p>&emsp;</p>
-                </div>
-
-                <div class="col-md-5">
-                    <h2 lang="pl" align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p lang="pl" class="lead text_align_mobile">Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
-                    <br><br>W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile.
-                    </p>
-                </div>
-            </div>
-    </section>
-	</div>
-
-    <!-- Contact Section -->
-
-    <div id="contact" class="contact-section">
-    <section class="container content-section text-center">
-            <div class="row">
-                <div class="col-md-5">
-                    <h2 align=left>Mándanos un email</h2>
-                    <p class="lead text_align_mobile">Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
-
-
-                    <!-- forma de contacto                                mi boton para español-->
-
-                    <!-- He añadido required para que sea necesario meter los datos. Habría que traducirlo con algun script-->
-                    <!-- Para evitar que formspree me redirija http://stackoverflow.com/questions/33984667/tryin-to-get-around-the-formspree-redirect-->
-
-                    <div class="row"><h2 class="text-center"><a href="#myModal" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Contáctanos</a></h2></div>
-
-                    <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:#f00">x</button>
-                                    <h3 id="myModalLabel" style="color:#000; text-align:left;">Mándanos un mensaje</h3>
-                                </div>
-                                <div class="modal-body">
-                                    <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
-
-                                    <!-- To avoid spam-->
-                                    <div>
-                                        <input type="text" name="_gotcha" style="display:none" />
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label pull-left" for="email" style="color:#000">Nombre</label>
-                                        <input class="form-control" placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000" required>
-
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label pull-left" style="color:#000" for="comment">Mensaje</label>
-                                        <textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual" name="name"rows="3" id="comment" required></textarea>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label  class="control-label pull-left" style="color:#000" >E-Mail</label>
-                                        <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>
-                                    </div>
-                                        <div class="form-group" style="color:#000">
-                                            <button id="linkButton" style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Cancelar</button>
-                                            <button type="submit" class="btn btn-success pull-right">Enviar</button>
-
-                                        </div>
-                                        <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="pages/thanks_es.html"/>
-
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- forma de contacto -->
-                </div>
-
-                <div class="col-md-1">
-                    <p>&emsp;</p>
-                </div>
-
-                <div lang="pl" class="col-md-5">
-                    <h2  align=left>Wyślij do nas zapytanie</h2>
-                    <p class="lead text_align_mobile">Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
-                     <!-- forma de contacto                                polaco-->
-                    <div class="row"><h2 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h2></div>
-
-                    <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:#f00">x</button>
-                                    <h3 id="myModalLabel"style="color:#000; text-align:left;">Wyślij wiadomość</h3>
-                                </div>
-                                <div class="modal-body">
-                                    <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
-                                    <!-- To avoid spam-->
-                                    <div>
-                                        <input type="text" name="_gotcha" style="display:none" />
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="control-label pull-left" for="email" style="color:#000">Imię</label>
-                                        <input class="form-control" placeholder="Jan Kowalski" data-trigger="manual"type="text" name="name" style="color:#000" required>
-
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label pull-left" style="color:#000" for="comment">Wiadomość</label>
-                                        <textarea class="form-control" placeholder="Tutaj napisz do nas" data-placement="top" data-trigger="manual" name="name"rows="3" id="comment" required></textarea>
-
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label  class="control-label pull-left" style="color:#000">E-Mail</label>
-                                        <input class="form-control" placeholder="jankowalski@email.com (żebysmy mogli odpowiedzieć na Twojego e-maila)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>
-                                    </div>
-
-                                        <div class="form-group" style="color:#000">
-                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true" >Anuluj</button>
-                                            <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button>
-                                        </div>
-                                        <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="pages/thanks_pl.html"/>
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- forma de contacto -->
-                </div>
-            </div>
-
-    </section>
-    </div>
 
     <!-- Map Section -->
      <div class="col-md-12" align="center">
@@ -289,8 +53,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <a id="footer" class="page-scroll" href="#page-top" >
-                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
+            <a id="footer">
+                <p >Copyright &copy; Javier Oliver García</p>
             </a>
         </div>
     </footer>
@@ -304,12 +68,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
-    <script src="js/custom.js"></script>
-
-
 
 </body>
 
